In this commit did created the xml and class for model view of the sale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".view.activity.ClientDetailActivity"
             android:label="@string/title_activity_client_detail" >
         </activity>
+        <activity
+            android:name=".SaleActivity"
+            android:label="@string/title_activity_sale" >
+        </activity>
     </application>
 
 </manifest>
