In this commit i created the form of the itens of sale.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         </activity>
         <activity
             android:name=".view.activity.SaleActivity"
-            android:label="@string/title_activity_sale" >
+            android:label="@string/title_activity_sale"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
