--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".view.activity.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +22,12 @@
         <activity
             android:name=".view.activity.ClientActivity"
             android:label="@string/title_activity_client"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".view.activity.ClientDetailActivity"
             android:label="@string/title_activity_client_detail"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".view.activity.SaleActivity"
@@ -37,7 +37,11 @@
         <activity
             android:name=".view.activity.SaleListActivity"
             android:label="@string/title_activity_sale_list"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".view.activity.PaymentActivity"
+            android:label="@string/title_activity_payment" >
         </activity>
     </application>
 
